# comet-cc-recall

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/comet_cc_recall/: __init__.py  anchor.py  cli.py  cli_digest.py  cli_hook.py  cli_mcp.py  client.py  context.py  diff.py  digest.py  filters.py  fmt.py  hook.py  mcp_server.py  recall.py  related.py  repo.py  search.py  symbols.py
tests/: conftest.py  test_anchor.py  test_cli.py  test_cli_digest.py  test_cli_v02.py  test_client.py  test_client_v02.py  test_context.py  test_diff.py  test_digest.py  test_filters.py  test_fmt.py  test_fmt_v02.py  test_hook.py  test_mcp_server.py  test_recall.py  test_related.py  test_repo.py  test_search.py  test_symbols.py
